Creating a new key from New host screen will select that key
